tests/syntax/good/expr_array1.c

void f(){

x[10][30];
}

