tests/syntax/bad/instr_bloc_fail1.c

void f() {

{ 34; } / x;
}


